A3/a3.output
   0  $accept : %entry% $end

   1  main : disj_expression EOF
   2       | disj_expression

   3  disj_expression : disj_expression DISJ conj_expression
   4                  | conj_expression

   5  conj_expression : conj_expression CONJ not_expression
   6                  | not_expression

   7  not_expression : NOT compare_expression
   8                 | compare_expression

   9  compare_expression : compare_expression EQ minus_expression
  10                     | compare_expression LT minus_expression
  11                     | compare_expression GT minus_expression
  12                     | compare_expression LT EQ minus_expression
  13                     | compare_expression EQ LT minus_expression
  14                     | compare_expression GT EQ minus_expression
  15                     | compare_expression EQ GT minus_expression
  16                     | minus_expression

  17  minus_expression : minus_expression MINUS add_expression
  18                   | add_expression

  19  add_expression : add_expression PLUS rem_expression
  20                 | rem_expression

  21  rem_expression : rem_expression REM mult_expression
  22                 | mult_expression

  23  mult_expression : mult_expression TIMES div_expression
  24                  | div_expression

  25  div_expression : div_expression DIV abs_expression
  26                 | abs_expression

  27  abs_expression : ABS neg_expression
  28                 | neg_expression

  29  neg_expression : TILDA neg_expression
  30                 | ifte_expression

  31  ifte_expression : IF main THEN main ELSE main FI
  32                  | proj_expression

  33  proj_expression : PROJ LP INT COMMA INT RP tuple_expression
  34                  | tuple_expression

  35  tuple_expression : LP RP
  36                   | LP comma_expression RP
  37                   | constant

  38  comma_expression : main COMMA main
  39                   | comma_expression COMMA main

  40  constant : ID
  41           | INT
  42           | BOOL
  43           | LP main RP

  44  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (44)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 12
	disj_expression  goto 13
	conj_expression  goto 14
	not_expression  goto 15
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	constant : INT .  (41)

	.  reduce 41


state 4
	constant : BOOL .  (42)

	.  reduce 42


state 5
	constant : ID .  (40)

	.  reduce 40


state 6
	abs_expression : ABS . neg_expression  (27)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	neg_expression  goto 28
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 7
	neg_expression : TILDA . neg_expression  (29)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	neg_expression  goto 29
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 8
	not_expression : NOT . compare_expression  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	compare_expression  goto 30
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 9
	tuple_expression : LP . RP  (35)
	tuple_expression : LP . comma_expression RP  (36)
	constant : LP . main RP  (43)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	RP  shift 31
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 32
	disj_expression  goto 13
	conj_expression  goto 14
	not_expression  goto 15
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	comma_expression  goto 33
	constant  goto 27


state 10
	ifte_expression : IF . main THEN main ELSE main FI  (31)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 34
	disj_expression  goto 13
	conj_expression  goto 14
	not_expression  goto 15
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 11
	proj_expression : PROJ . LP INT COMMA INT RP tuple_expression  (33)

	LP  shift 35
	.  error


state 12
	%entry% : '\001' main .  (44)

	.  reduce 44


state 13
	main : disj_expression . EOF  (1)
	main : disj_expression .  (2)
	disj_expression : disj_expression . DISJ conj_expression  (3)

	DISJ  shift 36
	EOF  shift 37
	$end  reduce 2
	RP  reduce 2
	THEN  reduce 2
	ELSE  reduce 2
	FI  reduce 2
	COMMA  reduce 2


state 14
	disj_expression : conj_expression .  (4)
	conj_expression : conj_expression . CONJ not_expression  (5)

	CONJ  shift 38
	$end  reduce 4
	DISJ  reduce 4
	RP  reduce 4
	THEN  reduce 4
	ELSE  reduce 4
	FI  reduce 4
	COMMA  reduce 4
	EOF  reduce 4


state 15
	conj_expression : not_expression .  (6)

	.  reduce 6


state 16
	not_expression : compare_expression .  (8)
	compare_expression : compare_expression . EQ minus_expression  (9)
	compare_expression : compare_expression . LT minus_expression  (10)
	compare_expression : compare_expression . GT minus_expression  (11)
	compare_expression : compare_expression . LT EQ minus_expression  (12)
	compare_expression : compare_expression . EQ LT minus_expression  (13)
	compare_expression : compare_expression . GT EQ minus_expression  (14)
	compare_expression : compare_expression . EQ GT minus_expression  (15)

	EQ  shift 39
	GT  shift 40
	LT  shift 41
	$end  reduce 8
	CONJ  reduce 8
	DISJ  reduce 8
	RP  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	FI  reduce 8
	COMMA  reduce 8
	EOF  reduce 8


state 17
	compare_expression : minus_expression .  (16)
	minus_expression : minus_expression . MINUS add_expression  (17)

	MINUS  shift 42
	$end  reduce 16
	CONJ  reduce 16
	DISJ  reduce 16
	EQ  reduce 16
	GT  reduce 16
	LT  reduce 16
	RP  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	FI  reduce 16
	COMMA  reduce 16
	EOF  reduce 16


state 18
	minus_expression : add_expression .  (18)
	add_expression : add_expression . PLUS rem_expression  (19)

	PLUS  shift 43
	$end  reduce 18
	MINUS  reduce 18
	CONJ  reduce 18
	DISJ  reduce 18
	EQ  reduce 18
	GT  reduce 18
	LT  reduce 18
	RP  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	FI  reduce 18
	COMMA  reduce 18
	EOF  reduce 18


state 19
	add_expression : rem_expression .  (20)
	rem_expression : rem_expression . REM mult_expression  (21)

	REM  shift 44
	$end  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20
	CONJ  reduce 20
	DISJ  reduce 20
	EQ  reduce 20
	GT  reduce 20
	LT  reduce 20
	RP  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	FI  reduce 20
	COMMA  reduce 20
	EOF  reduce 20


state 20
	rem_expression : mult_expression .  (22)
	mult_expression : mult_expression . TIMES div_expression  (23)

	TIMES  shift 45
	$end  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22
	REM  reduce 22
	CONJ  reduce 22
	DISJ  reduce 22
	EQ  reduce 22
	GT  reduce 22
	LT  reduce 22
	RP  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	FI  reduce 22
	COMMA  reduce 22
	EOF  reduce 22


state 21
	mult_expression : div_expression .  (24)
	div_expression : div_expression . DIV abs_expression  (25)

	DIV  shift 46
	$end  reduce 24
	PLUS  reduce 24
	MINUS  reduce 24
	TIMES  reduce 24
	REM  reduce 24
	CONJ  reduce 24
	DISJ  reduce 24
	EQ  reduce 24
	GT  reduce 24
	LT  reduce 24
	RP  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	FI  reduce 24
	COMMA  reduce 24
	EOF  reduce 24


state 22
	div_expression : abs_expression .  (26)

	.  reduce 26


state 23
	abs_expression : neg_expression .  (28)

	.  reduce 28


state 24
	neg_expression : ifte_expression .  (30)

	.  reduce 30


state 25
	ifte_expression : proj_expression .  (32)

	.  reduce 32


state 26
	proj_expression : tuple_expression .  (34)

	.  reduce 34


state 27
	tuple_expression : constant .  (37)

	.  reduce 37


state 28
	abs_expression : ABS neg_expression .  (27)

	.  reduce 27


state 29
	neg_expression : TILDA neg_expression .  (29)

	.  reduce 29


state 30
	not_expression : NOT compare_expression .  (7)
	compare_expression : compare_expression . EQ minus_expression  (9)
	compare_expression : compare_expression . LT minus_expression  (10)
	compare_expression : compare_expression . GT minus_expression  (11)
	compare_expression : compare_expression . LT EQ minus_expression  (12)
	compare_expression : compare_expression . EQ LT minus_expression  (13)
	compare_expression : compare_expression . GT EQ minus_expression  (14)
	compare_expression : compare_expression . EQ GT minus_expression  (15)

	EQ  shift 39
	GT  shift 40
	LT  shift 41
	$end  reduce 7
	CONJ  reduce 7
	DISJ  reduce 7
	RP  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	FI  reduce 7
	COMMA  reduce 7
	EOF  reduce 7


state 31
	tuple_expression : LP RP .  (35)

	.  reduce 35


state 32
	comma_expression : main . COMMA main  (38)
	constant : LP main . RP  (43)

	RP  shift 47
	COMMA  shift 48
	.  error


state 33
	tuple_expression : LP comma_expression . RP  (36)
	comma_expression : comma_expression . COMMA main  (39)

	RP  shift 49
	COMMA  shift 50
	.  error


state 34
	ifte_expression : IF main . THEN main ELSE main FI  (31)

	THEN  shift 51
	.  error


state 35
	proj_expression : PROJ LP . INT COMMA INT RP tuple_expression  (33)

	INT  shift 52
	.  error


state 36
	disj_expression : disj_expression DISJ . conj_expression  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	conj_expression  goto 53
	not_expression  goto 15
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 37
	main : disj_expression EOF .  (1)

	.  reduce 1


state 38
	conj_expression : conj_expression CONJ . not_expression  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	not_expression  goto 54
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 39
	compare_expression : compare_expression EQ . minus_expression  (9)
	compare_expression : compare_expression EQ . LT minus_expression  (13)
	compare_expression : compare_expression EQ . GT minus_expression  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	GT  shift 55
	LT  shift 56
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	minus_expression  goto 57
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 40
	compare_expression : compare_expression GT . minus_expression  (11)
	compare_expression : compare_expression GT . EQ minus_expression  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	EQ  shift 58
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	minus_expression  goto 59
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 41
	compare_expression : compare_expression LT . minus_expression  (10)
	compare_expression : compare_expression LT . EQ minus_expression  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	EQ  shift 60
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	minus_expression  goto 61
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 42
	minus_expression : minus_expression MINUS . add_expression  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	add_expression  goto 62
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 43
	add_expression : add_expression PLUS . rem_expression  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	rem_expression  goto 63
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 44
	rem_expression : rem_expression REM . mult_expression  (21)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	mult_expression  goto 64
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 45
	mult_expression : mult_expression TIMES . div_expression  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	div_expression  goto 65
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 46
	div_expression : div_expression DIV . abs_expression  (25)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	abs_expression  goto 66
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 47
	constant : LP main RP .  (43)

	.  reduce 43


state 48
	comma_expression : main COMMA . main  (38)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 67
	disj_expression  goto 13
	conj_expression  goto 14
	not_expression  goto 15
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 49
	tuple_expression : LP comma_expression RP .  (36)

	.  reduce 36


state 50
	comma_expression : comma_expression COMMA . main  (39)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 68
	disj_expression  goto 13
	conj_expression  goto 14
	not_expression  goto 15
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 51
	ifte_expression : IF main THEN . main ELSE main FI  (31)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 69
	disj_expression  goto 13
	conj_expression  goto 14
	not_expression  goto 15
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 52
	proj_expression : PROJ LP INT . COMMA INT RP tuple_expression  (33)

	COMMA  shift 70
	.  error


state 53
	disj_expression : disj_expression DISJ conj_expression .  (3)
	conj_expression : conj_expression . CONJ not_expression  (5)

	CONJ  shift 38
	$end  reduce 3
	DISJ  reduce 3
	RP  reduce 3
	THEN  reduce 3
	ELSE  reduce 3
	FI  reduce 3
	COMMA  reduce 3
	EOF  reduce 3


state 54
	conj_expression : conj_expression CONJ not_expression .  (5)

	.  reduce 5


state 55
	compare_expression : compare_expression EQ GT . minus_expression  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	minus_expression  goto 71
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 56
	compare_expression : compare_expression EQ LT . minus_expression  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	minus_expression  goto 72
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 57
	compare_expression : compare_expression EQ minus_expression .  (9)
	minus_expression : minus_expression . MINUS add_expression  (17)

	MINUS  shift 42
	$end  reduce 9
	CONJ  reduce 9
	DISJ  reduce 9
	EQ  reduce 9
	GT  reduce 9
	LT  reduce 9
	RP  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	FI  reduce 9
	COMMA  reduce 9
	EOF  reduce 9


state 58
	compare_expression : compare_expression GT EQ . minus_expression  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	minus_expression  goto 73
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 59
	compare_expression : compare_expression GT minus_expression .  (11)
	minus_expression : minus_expression . MINUS add_expression  (17)

	MINUS  shift 42
	$end  reduce 11
	CONJ  reduce 11
	DISJ  reduce 11
	EQ  reduce 11
	GT  reduce 11
	LT  reduce 11
	RP  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	FI  reduce 11
	COMMA  reduce 11
	EOF  reduce 11


state 60
	compare_expression : compare_expression LT EQ . minus_expression  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	minus_expression  goto 74
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 61
	compare_expression : compare_expression LT minus_expression .  (10)
	minus_expression : minus_expression . MINUS add_expression  (17)

	MINUS  shift 42
	$end  reduce 10
	CONJ  reduce 10
	DISJ  reduce 10
	EQ  reduce 10
	GT  reduce 10
	LT  reduce 10
	RP  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	FI  reduce 10
	COMMA  reduce 10
	EOF  reduce 10


state 62
	minus_expression : minus_expression MINUS add_expression .  (17)
	add_expression : add_expression . PLUS rem_expression  (19)

	PLUS  shift 43
	$end  reduce 17
	MINUS  reduce 17
	CONJ  reduce 17
	DISJ  reduce 17
	EQ  reduce 17
	GT  reduce 17
	LT  reduce 17
	RP  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	FI  reduce 17
	COMMA  reduce 17
	EOF  reduce 17


state 63
	add_expression : add_expression PLUS rem_expression .  (19)
	rem_expression : rem_expression . REM mult_expression  (21)

	REM  shift 44
	$end  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	CONJ  reduce 19
	DISJ  reduce 19
	EQ  reduce 19
	GT  reduce 19
	LT  reduce 19
	RP  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	FI  reduce 19
	COMMA  reduce 19
	EOF  reduce 19


state 64
	rem_expression : rem_expression REM mult_expression .  (21)
	mult_expression : mult_expression . TIMES div_expression  (23)

	TIMES  shift 45
	$end  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21
	REM  reduce 21
	CONJ  reduce 21
	DISJ  reduce 21
	EQ  reduce 21
	GT  reduce 21
	LT  reduce 21
	RP  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	FI  reduce 21
	COMMA  reduce 21
	EOF  reduce 21


state 65
	mult_expression : mult_expression TIMES div_expression .  (23)
	div_expression : div_expression . DIV abs_expression  (25)

	DIV  shift 46
	$end  reduce 23
	PLUS  reduce 23
	MINUS  reduce 23
	TIMES  reduce 23
	REM  reduce 23
	CONJ  reduce 23
	DISJ  reduce 23
	EQ  reduce 23
	GT  reduce 23
	LT  reduce 23
	RP  reduce 23
	THEN  reduce 23
	ELSE  reduce 23
	FI  reduce 23
	COMMA  reduce 23
	EOF  reduce 23


state 66
	div_expression : div_expression DIV abs_expression .  (25)

	.  reduce 25


state 67
	comma_expression : main COMMA main .  (38)

	.  reduce 38


state 68
	comma_expression : comma_expression COMMA main .  (39)

	.  reduce 39


state 69
	ifte_expression : IF main THEN main . ELSE main FI  (31)

	ELSE  shift 75
	.  error


state 70
	proj_expression : PROJ LP INT COMMA . INT RP tuple_expression  (33)

	INT  shift 76
	.  error


state 71
	compare_expression : compare_expression EQ GT minus_expression .  (15)
	minus_expression : minus_expression . MINUS add_expression  (17)

	MINUS  shift 42
	$end  reduce 15
	CONJ  reduce 15
	DISJ  reduce 15
	EQ  reduce 15
	GT  reduce 15
	LT  reduce 15
	RP  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	FI  reduce 15
	COMMA  reduce 15
	EOF  reduce 15


state 72
	compare_expression : compare_expression EQ LT minus_expression .  (13)
	minus_expression : minus_expression . MINUS add_expression  (17)

	MINUS  shift 42
	$end  reduce 13
	CONJ  reduce 13
	DISJ  reduce 13
	EQ  reduce 13
	GT  reduce 13
	LT  reduce 13
	RP  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	FI  reduce 13
	COMMA  reduce 13
	EOF  reduce 13


state 73
	compare_expression : compare_expression GT EQ minus_expression .  (14)
	minus_expression : minus_expression . MINUS add_expression  (17)

	MINUS  shift 42
	$end  reduce 14
	CONJ  reduce 14
	DISJ  reduce 14
	EQ  reduce 14
	GT  reduce 14
	LT  reduce 14
	RP  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	FI  reduce 14
	COMMA  reduce 14
	EOF  reduce 14


state 74
	compare_expression : compare_expression LT EQ minus_expression .  (12)
	minus_expression : minus_expression . MINUS add_expression  (17)

	MINUS  shift 42
	$end  reduce 12
	CONJ  reduce 12
	DISJ  reduce 12
	EQ  reduce 12
	GT  reduce 12
	LT  reduce 12
	RP  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	FI  reduce 12
	COMMA  reduce 12
	EOF  reduce 12


state 75
	ifte_expression : IF main THEN main ELSE . main FI  (31)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	ABS  shift 6
	TILDA  shift 7
	NOT  shift 8
	LP  shift 9
	IF  shift 10
	PROJ  shift 11
	.  error

	main  goto 77
	disj_expression  goto 13
	conj_expression  goto 14
	not_expression  goto 15
	compare_expression  goto 16
	minus_expression  goto 17
	add_expression  goto 18
	rem_expression  goto 19
	mult_expression  goto 20
	div_expression  goto 21
	abs_expression  goto 22
	neg_expression  goto 23
	ifte_expression  goto 24
	proj_expression  goto 25
	tuple_expression  goto 26
	constant  goto 27


state 76
	proj_expression : PROJ LP INT COMMA INT . RP tuple_expression  (33)

	RP  shift 78
	.  error


state 77
	ifte_expression : IF main THEN main ELSE main . FI  (31)

	FI  shift 79
	.  error


state 78
	proj_expression : PROJ LP INT COMMA INT RP . tuple_expression  (33)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LP  shift 9
	.  error

	tuple_expression  goto 80
	constant  goto 27


state 79
	ifte_expression : IF main THEN main ELSE main FI .  (31)

	.  reduce 31


state 80
	proj_expression : PROJ LP INT COMMA INT RP tuple_expression .  (33)

	.  reduce 33


28 terminals, 19 nonterminals
45 grammar rules, 81 states
